--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "next": "10.2.0",
     "pokeapi-js-wrapper": "^1.2.0",
+    "pokemon-font": "^1.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
