--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "firebase": "^8.6.1",
     "next": "10.2.0",
     "pokeapi-js-wrapper": "^1.2.0",
     "pokemon-font": "^1.8.1",
